Fix nav width on mobile

--- a/src/styles/components/_responsive.scss
+++ b/src/styles/components/_responsive.scss
@@ -2,6 +2,12 @@
     .wrapper{
         width: 90%;
     }
+
+    .menu{
+        &__wrapper{
+            width: 100%;
+        }
+    }
 }
 
 @media only screen and (min-width: $breakpoint-tablet){
@@ -144,7 +150,7 @@
 
     .trailer{
         padding: $space-h1 0;
-        
+
         &__title{
             font-size: $h1-size;
             margin-bottom: $space-h3;
